@@ -1,7 +1,7 @@
 Package: wordspace
 Type: Package
 Title: Distributional Semantic Models in R
-Version: 0.1-22
+Version: 0.2-0
 Date: 2016-08-08
 Author: Stefan Evert [http://www.stefan-evert.de/]
 Maintainer: Stefan Evert <stefan.evert@fau.de>
@@ -9,10 +9,10 @@ Depends: R (>= 3.0.0), Matrix
 Imports: Rcpp (>= 0.11.0), sparsesvd, iotools, 
          methods, stats, utils, graphics, grDevices, cluster, MASS
 LinkingTo: Rcpp
-Description: An interactive laboratory for research on distributional semantic models (DSM).
+Description: An interactive laboratory for research on distributional semantic models ('DSM').
 License: GPL-3
 URL: http://wordspace.r-forge.r-project.org/
 LazyData: yes
 LazyDataCompression: xz
 Suggests: knitr, rmarkdown, tm
-# VignetteBuilder: knitr
+VignetteBuilder: knitr
